# rust-musig2

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: key_preparation.rs  lib.rs  nonce_preparation.rs  types.rs
