[package]
name = "musig2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.2", default-features = false }

[dev-dependencies]
bitcoin = { version = "0.30.2" }
hex = { version = "0.4.3" }
